src/tess/tl/test/pass/test_import_relative.tl
#module main
// Test relative import from fixtures directory
#import "../../fixtures/helper.tl"
main() {
    if helper.helper_value() == 42 { 0 } else { 1 }
}
