src/tess/tl/test/fail/test_fail_import_missing_quotes.tl
#module main
// Imports must use c"..." or <...>
#import Array.tl
main() { 0 }
